# advent-2025

./: .gitignore  README.md  pyproject.toml
days/02/: solution.py
solutions/2025/01/: solution.py
src/advent_tools/: cli.py
src/solutions/2025/03/: solution.py
src/solutions/2025/04/: solution.py
src/solutions/2025/05/: solution.py
src/templates/: solution_template.py
